# BusGPS

./: mqtt_sub.py  sdkconfig  sdkconfig.old
BusGPS_DataCollect/: data_collect.py  data_receive_web.html
BusGPS_DataCollect/dataset/: 2026-06-08_log_1.json  2026-06-08_log_2.json
BusGPS_ESP32/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
BusGPS_ESP32/components/DHT20/: CMakeLists.txt  DHT20.c  DHT20.h
BusGPS_ESP32/components/HMC5883/: CMakeLists.txt  HMC5883.h  HMC5883_U.c  HMC5883_U.h
BusGPS_ESP32/components/LinearAlgebra/: CMakeLists.txt  LinearAlgebra.c  LinearAlgebra.h
BusGPS_ESP32/components/MPU6050/: MPU6050_U.h
BusGPS_ESP32/components/TinyEKF/: TinyEKF.c  TinyEKF.h
BusGPS_ESP32/main/: CMakeLists.txt  main.c
BusGPS_ESP32/webpage/: coordinates.html  coordinates.js
components/HMC5883/: CMakeLists.txt  HMC5883.h  HMC5883_U.c  HMC5883_U.h
components/LC76G/: CMakeLists.txt  LC76G.c  LC76G.h
components/LSM303/: CMakeLists.txt  LSM303.c  LSM303.h
components/LinearAlgebra/: LinearAlgebra.c  LinearAlgebra.h
components/MPU6050/: CMakeLists.txt  MPU6050.c  MPU6050.h  MPU6050_U.c  MPU6050_U.h
components/NMEA/: CMakeLists.txt  NMEA.c  NMEA.h
components/TinyEKF/: CMakeLists.txt  TinyEKF.c  TinyEKF.h
components/WMM/: CMakeLists.txt  wmm.c  wmm.h  wmm_data.c
main/: CMakeLists.txt  main.c
main/include/: GPS.h  common.h  ekf.h  i2c.h  mqtt.h  storage.h  uart.h  webpage.h  wifi.h
main/src/: GPS.c  common.c  ekf.c  i2c.c  mqtt.c  storage.c  uart.c  webpage.c  wifi.c
webpage/: coordinates.html  coordinates.js
(+17 files in other folders)
